@@ -3,16 +3,17 @@
 x <- structure(pi, class="testit")
 xx <- structure("OK", class="testOK")
 
-for(f in ls(.GenericArgsEnv, all.names=TRUE))
+internalGenerics <- ls(.GenericArgsEnv, all.names=TRUE)
+for(f in internalGenerics)
 {
     cat("testing S3 generic '", f, "'\n", sep="")
     method <- paste(f, "testit", sep=".")
-    if(f %in% "seq.int") {
+    if(f == "seq.int") {
         ## note that this dispatches on 'seq'.
         assign("seq.testit", function(...) xx, .GlobalEnv)
         res <- seq.int(x, x)
     } else {
-        if(length(grep("<-$", f)) > 0) {
+        if(grepl("<-$", f)) {
             assign(method, function(x, value) xx, .GlobalEnv)
             y <- x
             res <- eval(substitute(ff(y, value=pi), list(ff=as.name(f))))
@@ -20,7 +21,9 @@ for(f in ls(.GenericArgsEnv, all.names=TRUE))
             ff <- get(f, .GenericArgsEnv)
             body(ff) <- xx
             assign(method, ff, .GlobalEnv)
-            res <- eval(substitute(ff(x), list(ff=as.name(f))))
+            res <- if(f %in% "%*%") # 2 args
+                        eval(substitute(ff(x,x), list(ff=as.name(f))))
+                   else eval(substitute(ff(x),   list(ff=as.name(f))))
         }
     }
     stopifnot(res == xx)
@@ -53,10 +56,10 @@ ff <- as.list(baseenv(), all.names=TRUE)
 ff <- names(ff)[vapply(ff, is.primitive, logical(1L))]
 
 known <- c(names(.GenericArgsEnv), names(.ArgsEnv), tools::langElts)
-stopifnot(ff %in% known, known %in% ff)
+stopifnot(ff %in% known, known %in% ff) ## identical(ff, known) "modulo sort()"
 
 
-## check which are not considered as possibles for S4 generic
+## check which are not considered as possibles for S4 generic (*all* should)
 ff4 <- names(meth.FList <- methods:::.BasicFunsList)
 # as.double is the same as as.numeric
 S4generic <- ff %in% c(ff4, "as.double")
@@ -67,16 +70,19 @@ if(length(notS4))
 stopifnot(S4generic)
 
 # functions which are listed but not primitive
-extraS4 <- c('unlist', 'as.vector', 'lengths')
+extraS4 <- c('unlist', 'as.vector', 'lengths') # == setdiff(ff4, ff)
 ff4[!ff4 %in% c(ff, extraS4)]
 stopifnot(ff4 %in% c(ff, extraS4))
 
 
 ## primitives which are not internally generic cannot have S4 methods
 ## unless specifically arranged (e.g. %*%)
-nongen_prims <- ff[!ff %in% ls(.GenericArgsEnv, all.names=TRUE)]
+nongen_prims <- ff[!ff %in% internalGenerics]
 ff3 <- ff4[vapply(meth.FList, function(x) is.logical(x) && !x, NA, USE.NAMES=FALSE)]
-ex <- nongen_prims[!nongen_prims %in% c("$", "$<-", "[", "[[" ,"[[<-", "[<-", "%*%", ff3)]
+ex <- nongen_prims[!nongen_prims %in%
+                   c("$", "$<-", "[", "[[" ,"[[<-", "[<-"
+                   , "%*%", "crossprod", "tcrossprod"
+                   , ff3)]
 if(length(ex))
     cat("non-generic primitives not excluded in methods:::.BasicFunsList:",
         paste(sQuote(ex), collapse=", "), "\n")
@@ -108,13 +114,16 @@ for(f in S4gen) {
 except <- c("call", "switch", ".C", ".Fortran", ".Call", ".External",
             ".External2", ".Call.graphics", ".External.graphics",
             ".subset", ".subset2", ".primTrace", ".primUntrace",
-            "lazyLoadDBfetch", ".Internal", ".Primitive", "^", "|",
-            "::", ":::", "%*%", "rep", "seq.int", "forceAndCall",
+            "lazyLoadDBfetch", ".Internal", ".Primitive",
+            unlist(lapply(c("Arith", "Compare", "Logic"), getGroupMembers)),
+            "%*%", "crossprod", "tcrossprod", # "matrixOps"
+            "!", "::", ":::",
+            "rep", "seq.int", "forceAndCall",
             "Tailcall",
             ## these may not be enabled
             "tracemem", "retracemem", "untracemem")
 
-for(f in ls(.GenericArgsEnv, all.names=TRUE)[-(1:15)])
+for(f in internalGenerics)
 {
     if (f %in% except) next
     g <- get(f, envir = .GenericArgsEnv)
@@ -126,8 +135,10 @@ for(f in ls(.GenericArgsEnv, all.names=TRUE)[-(1:15)])
     res <- try(do.call(f, a), silent = TRUE)
     m <- geterrmessage()
     if(!grepl('does not match|unused argument', m))
-        stop("failure on ", f)
+        ## message("failure on ", f,":\n\t\t", m)
+        stop("failure on ", f,":\n\t", m)
 }
+
 
 for(f in ls(.ArgsEnv, all.names=TRUE))
 {
